--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 numba = "^0.60.0"
-numpy = "^2.1.1"
+numpy = "*"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
