--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "anjl"
-version = "0.1.0"
+version = "0.0.0"
 description = "A neighbour-joining library for Python."
 authors = ["Alistair Miles <alimanfoo@googlemail.com>"]
 license = "MIT"
@@ -14,6 +14,9 @@ numpy = "*"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 
+# https://pypi.org/project/poetry-dynamic-versioning/
+[tool.poetry-dynamic-versioning]
+enable = true
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
+build-backend = "poetry_dynamic_versioning.backend"
