--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,24 @@ numpy = "*"
 
 # dev extras
 pytest = "*"
+pytest-xdist = "*"
+jupyterlab = "*"
+notebook = "*"
+pre-commit = "*"
+ruff = "*"
+snakeviz = "*"
+mypy = "*"
+memory-profiler = "*"
+zarr = "*"
+scipy = "*"
+tqdm = "*"
+ipywidgets = "*"
+ipykernel = "*"
 
 # Use the "extras" feature to allow testing with different versions
 # of numpy via github actions.
 [tool.poetry.extras]
-dev = ["pytest"]
+dev = ["pytest", "pytest-xdist", "notebook", "jupyterlab", "pre-commit", "ruff", "snakeviz", "mypy", "memory-profiler", "zarr", "scipy", "tqdm"]
 
 # https://pypi.org/project/poetry-dynamic-versioning/
 [tool.poetry-dynamic-versioning]
