--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,8 @@
 name = "anjl"
 version = "0.0.0"
 description = "A neighbour-joining library for Python."
+documentation = "https://github.com/alimanfoo/anjl"
+repository = "https://github.com/alimanfoo/anjl"
 authors = ["Alistair Miles <alimanfoo@googlemail.com>"]
 license = "MIT"
 readme = "README.md"
