--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ readme = "README.md"
 python = ">=3.10,<3.13"
 numba = "^0.60.0"
 numpy = "*"
+pandas = "*"
+plotly = "*"
 
 # dev extras
 pytest = "*"
