--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ readme = "README.md"
 python = ">=3.10,<3.13"
 numba = "^0.60.0"
 numpy = "*"
+pandas = "*"
+plotly = "*"
 
 # dev extras
 pytest = "*"
@@ -28,11 +30,12 @@ scipy = "*"
 tqdm = "*"
 ipywidgets = "*"
 ipykernel = "*"
+pandas-stubs = "*"
 
 # Use the "extras" feature to allow testing with different versions
 # of numpy via github actions.
 [tool.poetry.extras]
-dev = ["pytest", "pytest-xdist", "notebook", "jupyterlab", "pre-commit", "ruff", "snakeviz", "mypy", "memory-profiler", "zarr", "scipy", "tqdm"]
+dev = ["pytest", "pytest-xdist", "notebook", "jupyterlab", "pre-commit", "ruff", "snakeviz", "mypy", "memory-profiler", "zarr", "scipy", "tqdm", "ipywidgets", "ipykernel", "pandas-stubs"]
 
 # https://pypi.org/project/poetry-dynamic-versioning/
 [tool.poetry-dynamic-versioning]
@@ -40,3 +43,15 @@ enable = true
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
 build-backend = "poetry_dynamic_versioning.backend"
+
+[tool.mypy]
+warn_return_any = true
+warn_unused_configs = true
+
+[[tool.mypy.overrides]]
+module = "plotly.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "numba"
+ignore_missing_imports = true
