--- a/docs/pixi.toml
+++ b/docs/pixi.toml
@@ -1,8 +1,8 @@
 [project]
 authors = ["Alistair Miles <alimanfoo@googlemail.com>"]
 channels = ["conda-forge"]
-description = "Add a short description here"
-name = "docs"
+description = "anjl documentation"
+name = "anjl-docs"
 platforms = ["linux-64"]
 version = "0.1.0"
 
@@ -13,7 +13,7 @@ python = "3.12.*"
 mystmd = ">=1.3.12,<2"
 
 [pypi-dependencies]
-anjl = ">=0.8.0, <0.9"
+anjl = "*"
 jupyterlab = ">=4.2.5, <5"
 nbconvert = ">=7.16.4, <8"
 ipykernel = ">=6.29.5, <7"
