--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ numba = ">=0.60.0"
 numpy = "*"
 pandas = "*"
 plotly = "*"
+numpydoc_decorator = "*"
 
 # dev extras
 pytest = "*"
@@ -55,4 +56,8 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "numba"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "numpydoc_decorator"
 ignore_missing_imports = true
