--- a/benchmark/pixi.toml
+++ b/benchmark/pixi.toml
@@ -15,4 +15,9 @@ python = "3.12.*"
 jupyterlab = ">=4.2.5, <5"
 ipykernel = ">=6.29.5, <7"
 malariagen-data = ">=13.2.1, <14"
-pixi-kernel = ">=0.4.0, <0.5"
+pixi-kernel = ">=0.5.1, <0.6"
+biopython = ">=1.84, <2"
+scikit-bio = ">=0.6.2, <0.7"
+biotite = ">=1.0.1, <2"
+nbformat = ">=5.10.4, <6"
+anjl = ">=1.0.0, <2"
