--- a/benchmark/pixi.toml
+++ b/benchmark/pixi.toml
@@ -21,3 +21,4 @@ scikit-bio = ">=0.6.2, <0.7"
 biotite = ">=1.0.1, <2"
 nbformat = ">=5.10.4, <6"
 anjl = "==1.2.0"
+memory-profiler = ">=0.61.0, <0.62"
