--- a/benchmark/pixi.toml
+++ b/benchmark/pixi.toml
@@ -10,15 +10,16 @@ version = "0.1.0"
 
 [dependencies]
 python = "3.12.*"
+pip = "*"
 
 [pypi-dependencies]
-jupyterlab = ">=4.2.5, <5"
-ipykernel = ">=6.29.5, <7"
-malariagen-data = ">=13.2.1, <14"
-pixi-kernel = ">=0.5.1, <0.6"
-biopython = ">=1.84, <2"
-scikit-bio = ">=0.6.2, <0.7"
-biotite = ">=1.0.1, <2"
-nbformat = ">=5.10.4, <6"
-anjl = "==1.2.0"
-memory-profiler = ">=0.61.0, <0.62"
+jupyterlab = "*"
+ipykernel = "*"
+malariagen-data = "*"
+pixi-kernel = "*"
+biopython = "*"
+scikit-bio = "*"
+biotite = "*"
+nbformat = "*"
+anjl = "*"
+memory-profiler = "*"
