--- a/docs/pixi.toml
+++ b/docs/pixi.toml
@@ -13,9 +13,9 @@ python = "3.12.*"
 mystmd = ">=1.3.12,<2"
 
 [pypi-dependencies]
-anjl = ">=1.3.0"
-jupyterlab = ">=4.2.5, <5"
-nbconvert = ">=7.16.4, <8"
-ipykernel = ">=6.29.5, <7"
-pixi-kernel = ">=0.5.1, <0.6"
-jupyterlab-myst = ">=2.4.2, <3"
+anjl = "*"
+jupyterlab = "*"
+nbconvert = "*"
+ipykernel = "*"
+pixi-kernel = "*"
+jupyterlab-myst = "*"
